--- a/todos/src/app/app.component.html
+++ b/todos/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid">
     <div class="d-flex p-2 bd-highlight justify-content-center">
-        <app-login></app-login>
+    <router-outlet ></router-outlet>
     </div>
 </div>
