--- a/routing-start/src/app/servers/servers.component.html
+++ b/routing-start/src/app/servers/servers.component.html
@@ -2,7 +2,7 @@
   <div class="col-xs-12 col-sm-4">
     <div class="list-group">
       <a
-        [routerLink]="['/servers', 10, 'edit']"
+        [routerLink]="['/servers', server.id]"
         [queryParams]="{ allowEdit: true }"
         fragment="serverEdit"
         class="list-group-item"
