--- a/routing-start/src/app/home/home.component.html
+++ b/routing-start/src/app/home/home.component.html
@@ -2,3 +2,5 @@
 <p>Manage your Servers and Users.</p>
 
 <button class="btn btn-primary" (click)="onLoadServer()">onLoadServer</button>
+<button class="btn btn-success" (click)="login()">Login</button>
+<button class="btn btn-danger" (click)="logout()">Logout</button>
