--- a/forms-td-start/src/app/app.component.html
+++ b/forms-td-start/src/app/app.component.html
@@ -5,12 +5,12 @@
                 <div id="user-data">
                     <div class="form-group">
                         <label for="username">Username</label>
-                        <input ngModel name="username" type="text" id="username" class="form-control">
+                        <input ngModel name="username" type="text" id="username" class="form-control" required>
                     </div>
                     <button class="btn btn-default" type="button">Suggest an Username</button>
                     <div class="form-group">
                         <label for="email">Mail</label>
-                        <input ngModel name="email" type="email" id="email" class="form-control">
+                        <input ngModel name="email" type="email" id="email" class="form-control" required email>
                     </div>
                 </div>
                 <div class="form-group">
