--- a/forms-td-start/src/app/app.component.html
+++ b/forms-td-start/src/app/app.component.html
@@ -1,32 +1,68 @@
 <div class="container">
-    <div class="row">
-        <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
-            <form (ngSubmit)="onSubmit(form)" #form="ngForm">
-                <div id="user-data">
-                    <div class="form-group">
-                        <label for="username">Username</label>
-                        <input ngModel name="username" type="text" id="username" class="form-control" required #username="ngModel">
-                        <span class="help-block" *ngIf="!username.valid && username.touched">Please enter the valid value</span>
-                    </div>
-                    <button class="btn btn-default" type="button">Suggest an Username</button>
-                    <div class="form-group">
-                        <label for="email">Mail</label>
-                        <input ngModel name="email" type="email" id="email" class="form-control" required email>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label for="secret">Secret Questions</label>
-                    <select id="secret" [ngModel]="defaultQuestion" name="secret" class="form-control">
+  <div class="row">
+    <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
+      <form (ngSubmit)="onSubmit(form)" #form="ngForm">
+        <div id="user-data" ngModelGroup="userData" #userData="ngModelGroup">
+          <div class="form-group">
+            <label for="username">Username</label>
+            <input
+              ngModel
+              name="username"
+              type="text"
+              id="username"
+              class="form-control"
+              required
+              #username="ngModel"
+            />
+            <span class="help-block" *ngIf="!username.valid && username.touched"
+              >Please enter the valid value</span
+            >
+          </div>
+          <button class="btn btn-default" type="button">
+            Suggest an Username
+          </button>
+          <div class="form-group">
+            <label for="email">Mail</label>
+            <input
+              ngModel
+              name="email"
+              type="email"
+              id="email"
+              class="form-control"
+              required
+              email
+            />
+          </div>
+        </div>
+
+        <div class="form-group">
+          <label for="secret">Secret Questions</label>
+          <select
+            id="secret"
+            [ngModel]="defaultQuestion"
+            name="secret"
+            class="form-control"
+          >
             <option value="pet">Your first Pet?</option>
             <option value="teacher">Your first teacher?</option>
           </select>
-                </div>
-                <div class="form-group">
-                    <textarea class="form-control" name="questionAnswer" [(ngModel)]="answer" rows="3"></textarea>
-                </div>
-                <p>Your reply :- {{ answer }}</p>
-                <button class="btn btn-primary" type="submit" [disabled]="!form.valid">Submit</button>
-            </form>
         </div>
+        <div class="form-group">
+          <textarea
+            class="form-control"
+            name="questionAnswer"
+            [(ngModel)]="answer"
+            rows="3"
+          ></textarea>
+        </div>
+        <p>Your reply :- {{ answer }}</p>
+        <span class="help-block" *ngIf="!userData.valid && userData.touched"
+          >User Data is Invalid</span
+        >
+        <button class="btn btn-primary" type="submit" [disabled]="!form.valid">
+          Submit
+        </button>
+      </form>
     </div>
+  </div>
 </div>
