--- a/forms-td-start/src/app/app.component.html
+++ b/forms-td-start/src/app/app.component.html
@@ -34,7 +34,18 @@
             />
           </div>
         </div>
-
+        <div class="radio" *ngFor="let gender of genders">
+          <label for="gender">
+            <input
+              type="radio"
+              name="gender"
+              id=""
+              ngModel
+              [value]="gender"
+              required
+            />{{ gender }}
+          </label>
+        </div>
         <div class="form-group">
           <label for="secret">Secret Questions</label>
           <select
