TD: Setting and Patching Form Values

--- a/forms-td-start/src/app/app.component.html
+++ b/forms-td-start/src/app/app.component.html
@@ -18,7 +18,11 @@
               >Please enter the valid value</span
             >
           </div>
-          <button class="btn btn-default" type="button">
+          <button
+            class="btn btn-default"
+            (click)="suggestUserName()"
+            type="button"
+          >
             Suggest an Username
           </button>
           <div class="form-group">
