--- a/forms-reactive/src/app/app.component.html
+++ b/forms-reactive/src/app/app.component.html
@@ -33,6 +33,17 @@
             }}
           </label>
         </div>
+        <div class="form-group" formGroupName="passwordForm">
+          <label for="password">password</label>
+          <input
+            type="password"
+            formControlName="password"
+            class="form-control"
+          />
+          <span *ngIf="checkFormControlIsValid('passwordForm.password')">
+            Please Enter the password
+          </span>
+        </div>
         <button class="btn btn-primary" type="submit">Submit</button>
       </form>
     </div>
