--- a/Pipes/src/app/app.component.html
+++ b/Pipes/src/app/app.component.html
@@ -12,7 +12,7 @@
 					</span>
 					<strong>{{ server.name }}</strong> |
 					{{ server.instanceType | uppercase }} |
-					{{ server.started | date }}
+					{{ server.started | date: "short":"UTC":"en-US" }}
 				</li>
 			</ul>
 		</div>
