--- a/Pipes/src/app/app.component.html
+++ b/Pipes/src/app/app.component.html
@@ -1,5 +1,10 @@
 <div class="container">
 	<div class="row">
+		<br />
+		<br />
+		<h2>App Status : {{ appStatus | async }}</h2>
+		<br />
+		<br />
 		<div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
 			<input type="text" [(ngModel)]="filteredStatus" />
 			<br />
