--- a/http-requests/src/app/app.component.html
+++ b/http-requests/src/app/app.component.html
@@ -51,7 +51,13 @@
 	</div>
 	<div class="row">
 		<div class="col-xs-12 col-md-6 col-md-offset-3">
-			<p>No posts available!</p>
+			<p *ngIf="loadedPosts.length < 1">No posts available!</p>
+			<ul class="list-group" *ngIf="loadedPosts.length">
+				<li class="list-group-item" *ngFor="let eachPosts of loadedPosts">
+					<h3>{{ eachPosts.title | uppercase }}</h3>
+					<p>{{ eachPosts.content }}</p>
+				</li>
+			</ul>
 		</div>
 	</div>
 </div>
