--- a/http-requests/src/app/app.component.html
+++ b/http-requests/src/app/app.component.html
@@ -51,8 +51,9 @@
 	</div>
 	<div class="row">
 		<div class="col-xs-12 col-md-6 col-md-offset-3">
-			<p *ngIf="loadedPosts.length < 1">No posts available!</p>
-			<ul class="list-group" *ngIf="loadedPosts.length">
+			<p *ngIf="isLoading">Loading......!</p>
+			<p *ngIf="loadedPosts.length < 1 && !isLoading">No posts available!</p>
+			<ul class="list-group" *ngIf="loadedPosts.length && !isLoading">
 				<li class="list-group-item" *ngFor="let eachPosts of loadedPosts">
 					<h3>{{ eachPosts.title | uppercase }}</h3>
 					<p>{{ eachPosts.content }}</p>
