--- a/http-requests/src/app/app.component.html
+++ b/http-requests/src/app/app.component.html
@@ -51,7 +51,11 @@
 	</div>
 	<div class="row">
 		<div class="col-xs-12 col-md-6 col-md-offset-3">
-			<p *ngIf="isLoading">Loading......!</p>
+			<p *ngIf="isLoading && !error">Loading......!</p>
+			<div *ngIf="error" class="alert alert-danger">
+				<h1>Error</h1>
+				<p>{{ error }}</p>
+			</div>
 			<p *ngIf="loadedPosts.length < 1 && !isLoading">No posts available!</p>
 			<ul class="list-group" *ngIf="loadedPosts.length && !isLoading">
 				<li class="list-group-item" *ngFor="let eachPosts of loadedPosts">
