--- a/Angular15/src/app/directive-composition-api/directive-composition-api.component.html
+++ b/Angular15/src/app/directive-composition-api/directive-composition-api.component.html
@@ -1,1 +1,17 @@
-<p>directive-composition-api works!</p>
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<div class="container text-center">
+  <div class="row">
+    <div class="col"></div>
+    <div class="col-6 border">
+      <p class="mt-3" appStyle [myColor]="color" [myClass]="myFontClass">
+        Directive Composition API works!
+      </p>
+    </div>
+    <div class="col"></div>
+  </div>
+</div>
