--- a/Angular15/src/app/home/home.component.html
+++ b/Angular15/src/app/home/home.component.html
@@ -80,7 +80,7 @@
       <span>Directive Composition API</span>
     </button>
 
-    <button class="card card-small" tabindex="0">
+    <button class="card card-small" routerLink="frg" tabindex="0">
       <svg
         class="material-icons"
         xmlns="http://www.w3.org/2000/svg"
