Performant Angular Applications

--- a/Angular15/src/app/home/home.component.html
+++ b/Angular15/src/app/home/home.component.html
@@ -93,7 +93,7 @@
       <span>Functional Route Guards</span>
     </button>
 
-    <button class="card card-small" tabindex="0">
+    <button class="card card-small" routerLink="paa" tabindex="0">
       <svg
         class="material-icons"
         xmlns="http://www.w3.org/2000/svg"
