--- a/Angular15/src/app/home/home.component.html
+++ b/Angular15/src/app/home/home.component.html
@@ -106,7 +106,7 @@
       <span>Performant Angular Applications</span>
     </button>
 
-    <button class="card card-small" tabindex="0">
+    <button class="card card-small" routerLink="NgOptimizedImage" tabindex="0">
       <svg
         class="material-icons"
         xmlns="http://www.w3.org/2000/svg"
