Routes are updated

--- a/Angular15/src/app/home/home.component.html
+++ b/Angular15/src/app/home/home.component.html
@@ -67,7 +67,11 @@
   <h2>Topics</h2>
 
   <div class="card-container">
-    <button class="card card-small" routerLink="dc-api" tabindex="0">
+    <button
+      class="card card-small"
+      routerLink="Directive-Composition-API"
+      tabindex="0"
+    >
       <svg
         class="material-icons"
         xmlns="http://www.w3.org/2000/svg"
@@ -80,7 +84,11 @@
       <span>Directive Composition API</span>
     </button>
 
-    <button class="card card-small" routerLink="frg" tabindex="0">
+    <button
+      class="card card-small"
+      routerLink="Functional-Route-Guards"
+      tabindex="0"
+    >
       <svg
         class="material-icons"
         xmlns="http://www.w3.org/2000/svg"
@@ -93,7 +101,11 @@
       <span>Functional Route Guards</span>
     </button>
 
-    <button class="card card-small" routerLink="paa" tabindex="0">
+    <button
+      class="card card-small"
+      routerLink="Performant-Angular-Applications"
+      tabindex="0"
+    >
       <svg
         class="material-icons"
         xmlns="http://www.w3.org/2000/svg"
