Performant Angular Applications updated

--- a/Angular15/src/app/performant-angular-applications/performant-angular-applications.component.html
+++ b/Angular15/src/app/performant-angular-applications/performant-angular-applications.component.html
@@ -117,15 +117,12 @@
         Angular Pipes are one of most awesome utility. There are lot of
         predefined pipes in angular which you can make use of in your respective
         application. <strong>Async Pipe </strong> allows you to use RxJS
-        Observables directly in your respective Angular Templates. But as we saw
-        earlier, if you subscribe to an observable make sure you unsubscribe it.
-        But if you use async pipe you don’t have to worry about it. The best use
-        of Async Pipe is that it allows us to use OnPush Change Detection.
-        Whenever the value of an observable gets changed, we can inform Angular
-        about it and the async pipe takes care of updating the current value.
-        You can use Async pipe as, As I said previously you don’t have to worry
-        about unsubscribing the respective observable. It’s one of my favorite
-        pipe in Angular.
+        Observables directly in your respective Angular Templates. if you
+        subscribe to an observable make sure you unsubscribe it. But if you use
+        async pipe you don’t have to worry about it. The best use of Async Pipe
+        is that it allows us to use OnPush Change Detection. Whenever the value
+        of an observable gets changed, we can inform Angular about it and the
+        async pipe takes care of updating the current value.
       </div>
       <img src="../../assets/async.png" alt="" srcset="" />
     </div>
