--- a/src/app/total/total.component.html
+++ b/src/app/total/total.component.html
@@ -1,5 +1,25 @@
 <app-header></app-header>
-<div class="container-fluid text-center mt-5">
+<div class="container-fluid text-center mt-3">
+  <div class="row">
+    <div class="col-md-5"></div>
+    <div class="col-md-2">
+      <mat-form-field appearance="fill">
+        <mat-label>Enter a date range</mat-label>
+        <mat-date-range-input [rangePicker]="picker">
+          <input matStartDate placeholder="Start date" />
+          <input matEndDate placeholder="End date" />
+        </mat-date-range-input>
+        <mat-datepicker-toggle
+          matIconSuffix
+          [for]="picker"
+        ></mat-datepicker-toggle>
+        <mat-date-range-picker #picker></mat-date-range-picker>
+      </mat-form-field>
+    </div>
+    <div class="col-md-2"></div>
+  </div>
+</div>
+<div class="container-fluid text-center">
   <div class="row">
     <div class="col-md-1"></div>
     <div class="col-md-10">
@@ -7,23 +27,25 @@
         <thead>
           <tr>
             <th scope="col">#</th>
-            <th scope="col">First</th>
-            <th scope="col">Last</th>
-            <th scope="col">Handle</th>
+            <th scope="col">Date</th>
+            <th scope="col">Meal Time</th>
+            <th scope="col">Person Name</th>
+            <th scope="col">Meal Consumed</th>
           </tr>
         </thead>
         <tbody>
-          <tr>
-            <th scope="row">1</th>
-            <td>Mark</td>
-            <td>Otto</td>
-            <td>@mdo</td>
-          </tr>
-          <tr>
-            <th scope="row">2</th>
-            <td>Jacob</td>
-            <td>Thornton</td>
-            <td>@fat</td>
+          <tr *ngFor="let eachData of totalMealDetails; let ind = index">
+            <th scope="row">{{ ind + 1 }}</th>
+            <td>{{ eachData.mealDate }}</td>
+            <td>{{ eachData.mealTime }}</td>
+            <td>{{ eachData.mealsConsumedUser }}</td>
+            <td>
+              <img
+                class="text-success-emphasis"
+                src="../../assets/{{ eachData.mealsConsumed }}.svg"
+                [alt]="eachData.mealsConsumedUser + eachData.mealDate"
+              />
+            </td>
           </tr>
         </tbody>
       </table>
