--- a/src/app/total/total.component.html
+++ b/src/app/total/total.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
-<div class="container-fluid text-center">
+<div class="container-fluid mt-3 text-center">
   <div class="row">
     <div class="col-md-1"></div>
     <div class="col-md-10">
