--- a/src/app/meal-form/meal-form.component.html
+++ b/src/app/meal-form/meal-form.component.html
@@ -25,11 +25,36 @@
       <div>
         <mat-form-field appearance="fill">
           <mat-label>Meal Time</mat-label>
-          <mat-select formControlName="mealTime">
+          <mat-select
+            formControlName="mealTime"
+            (valueChange)="mealTimeChanged($event)"
+          >
             <mat-option *ngFor="let eachMeal of mealTime" [value]="eachMeal">
               {{ eachMeal }}
             </mat-option>
           </mat-select>
+        </mat-form-field>
+      </div>
+      <div>
+        <mat-form-field>
+          <mat-label>Amount per meal</mat-label>
+          <input
+            matInput
+            placeholder="50"
+            formControlName="amountPerMeal"
+            type="number"
+          />
+        </mat-form-field>
+      </div>
+      <div>
+        <mat-form-field>
+          <mat-label>Meal Count</mat-label>
+          <input
+            matInput
+            placeholder="5"
+            formControlName="mealCount"
+            type="number"
+          />
         </mat-form-field>
       </div>
       <div
