--- a/src/app/meal-form/meal-form.component.html
+++ b/src/app/meal-form/meal-form.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
-<div class="container-fluid text-center mt-5">
+<div *ngIf="!pageLoading" class="container-fluid text-center mt-5">
   <div class="row">
     <div class="col-md-3"></div>
     <form
@@ -97,7 +97,7 @@
         </div>
       </div>
       <button
-        class="btn btn-success m-3"
+        class="btn btn-primary m-3"
         [disabled]="mealForm.invalid"
         type="submit"
       >
@@ -107,3 +107,5 @@
     <div class="col-md-3"></div>
   </div>
 </div>
+
+<mat-spinner class="spinner" *ngIf="pageLoading"></mat-spinner>
