spinner added for detail component

--- a/src/app/detail-total/detail-total.component.html
+++ b/src/app/detail-total/detail-total.component.html
@@ -1,4 +1,5 @@
 <app-header></app-header>
+<mat-spinner class="spinner" *ngIf="pageLoading"></mat-spinner>
 <div class="container-fluid text-center mt-5">
   <div class="row">
     <div
