--- a/src/app/detail-total/detail-total.component.html
+++ b/src/app/detail-total/detail-total.component.html
@@ -1,6 +1,6 @@
 <app-header></app-header>
 <mat-spinner class="spinner" *ngIf="pageLoading"></mat-spinner>
-<div class="container-fluid text-center mt-5">
+<div *ngIf="!pageLoading" class="container-fluid text-center mt-5">
   <div class="row">
     <div
       class="col-md-4 mt-3"
