--- a/src/app/all-meal-records/all-meal-records.component.html
+++ b/src/app/all-meal-records/all-meal-records.component.html
@@ -1,5 +1,7 @@
 <app-header></app-header>
-<div class="container-fluid text-center mt-5">
+<mat-spinner class="spinner" *ngIf="pageLoading"></mat-spinner>
+
+<div *ngIf="!pageLoading" class="container-fluid text-center mt-5">
   <div class="row">
     <div class="col-lg-1"></div>
     <table class="table table-info table-striped-columns table-hover">
@@ -32,9 +34,7 @@
           </td>
           <td>{{ eachDetail.amountPerMeal }}</td>
           <td>
-            <Button
-              class="btn btn-danger"
-              (click)="deleteRecord(eachDetail._id!)"
+            <Button class="btn btn-danger" (click)="deleteRecord(eachDetail)"
               >X</Button
             >
           </td>
