--- a/ControlValueAccessor/src/app/app.component.html
+++ b/ControlValueAccessor/src/app/app.component.html
@@ -12,7 +12,7 @@
           aria-describedby="basic-addon1"
         />
       </div>
-      <app-email [(ngModel)]="title"></app-email>
+      <app-email></app-email>
       <button type="button" class="btn btn-primary">{{ title }}</button>
     </div>
     <div class="col-md-4"></div>
