basic init for controlValueAccessor

--- a/ControlValueAccessor/src/app/app.component.html
+++ b/ControlValueAccessor/src/app/app.component.html
@@ -1,20 +1,23 @@
 <div class="container-fluid">
-  <div class="row mt-5">
-    <div class="col-md-4"></div>
-    <div class="col-md-4">
-      <div class="input-group mb-3">
-        <span class="input-group-text" id="basic-addon1">@</span>
-        <input
-          type="text"
-          class="form-control"
-          placeholder="Username"
-          aria-label="Username"
-          aria-describedby="basic-addon1"
-        />
+  <form [formGroup]="userForm" (ngSubmit)="saveUser()">
+    <div class="row mt-5">
+      <div class="col-md-4"></div>
+      <div class="col-md-4">
+        <div class="input-group mb-3">
+          <span class="input-group-text" id="basic-addon1">@</span>
+          <input
+            type="text"
+            class="form-control"
+            placeholder="Username"
+            formControlName="userName"
+            aria-label="Username"
+            aria-describedby="basic-addon1"
+          />
+        </div>
+        <app-email formControlName="email"></app-email>
+        <button type="submit" class="btn btn-primary">{{ title }}</button>
       </div>
-      <app-email></app-email>
-      <button type="button" class="btn btn-primary">{{ title }}</button>
+      <div class="col-md-4"></div>
     </div>
-    <div class="col-md-4"></div>
-  </div>
+  </form>
 </div>
