--- a/ControlValueAccessor/src/app/email/email.component.html
+++ b/ControlValueAccessor/src/app/email/email.component.html
@@ -2,10 +2,10 @@
   <input
     type="text"
     class="form-control"
-    [(ngModel)]="value"
     placeholder="Recipient's username"
     aria-label="Recipient's username"
     aria-describedby="basic-addon2"
+    [formControl]="emailValue"
   />
   <span class="input-group-text" id="basic-addon2">@example.com</span>
 </div>
