Control Value accessor

--- a/ControlValueAccessor/src/app/email/email.component.html
+++ b/ControlValueAccessor/src/app/email/email.component.html
@@ -5,7 +5,9 @@
     placeholder="Recipient's username"
     aria-label="Recipient's username"
     aria-describedby="basic-addon2"
-    [formControl]="emailValue"
+    [(ngModel)]="email"
+    (ngModelChange)="valueChangeEvent()"
+    [disabled]="disabled"
   />
   <span class="input-group-text" id="basic-addon2">@example.com</span>
 </div>
