--- a/ControlValueAccessor/src/app/app.component.html
+++ b/ControlValueAccessor/src/app/app.component.html
@@ -1,3 +1,4 @@
+<!-- Reactive form -->
 <div class="container-fluid">
   <form [formGroup]="userForm" (ngSubmit)="saveUser()">
     <div class="row mt-5">
@@ -15,9 +16,18 @@
           />
         </div>
         <app-email formControlName="email"></app-email>
-        <button type="submit" class="btn btn-primary">{{ title }}</button>
+        <button
+          type="submit"
+          class="btn btn-primary"
+          [disabled]="!userForm.touched"
+        >
+          {{ title }}
+        </button>
       </div>
       <div class="col-md-4"></div>
     </div>
   </form>
 </div>
+
+<!-- NgModel -->
+<!-- <app-email [(ngModel)]="title" (ngModelChange)="saveUser()"></app-email> -->
