--- a/signals/src/app/app.component.html
+++ b/signals/src/app/app.component.html
@@ -7,19 +7,29 @@
         <input
           type="text"
           class="form-control"
-          placeholder="Username"
-          aria-label="Username"
+          placeholder="name"
+          aria-label="name"
           aria-describedby="basic-addon1"
+          (input)="setUserName($event)"
         />
       </div>
+      <button
+        type="button"
+        class="btn btn-primary"
+        (click)="addNewUser()"
+        *ngIf="userName()"
+      >
+        add {{ userName() }} to user List
+      </button>
     </div>
-    <div class="col-md-4">
-      <ul class="list-group">
-        <li class="list-group-item">An item</li>
-        <li class="list-group-item">A second item</li>
-        <li class="list-group-item">A third item</li>
-        <li class="list-group-item">A fourth item</li>
-        <li class="list-group-item">And a fifth one</li>
+    <div class="col-md-2">
+      <ul class="list-group" *ngFor="let item of filteredUsersArray()">
+        <li
+          class="list-group-item d-flex justify-content-between align-items-center mt-1"
+        >
+          {{ item.name }}
+          <span class="badge bg-primary rounded-pill">{{ item.age }}</span>
+        </li>
       </ul>
     </div>
   </div>
